refactor: two origins deleted, RIP

--- a/src/main/resources/assets/moreorigins/lang/en_us.json
+++ b/src/main/resources/assets/moreorigins/lang/en_us.json
@@ -5,6 +5,5 @@
   "item.moreorigins.oceanite_helmet": "Oceanite Helmet",
   "item.moreorigins.oceanite_chestplate": "Oceanite Chestplate",
   "item.moreorigins.oceanite_leggings": "Oceanite Leggings",
-  "item.moreorigins.oceanite_boots": "Oceanite Boots",
-  "effect.moreorigins.dragonsoul": "Dragon Soul"
+  "item.moreorigins.oceanite_boots": "Oceanite Boots"
 }
