--- a/src/main/resources/assets/moreorigins/lang/en_us.json
+++ b/src/main/resources/assets/moreorigins/lang/en_us.json
@@ -5,5 +5,8 @@
   "item.moreorigins.oceanite_helmet": "Oceanite Helmet",
   "item.moreorigins.oceanite_chestplate": "Oceanite Chestplate",
   "item.moreorigins.oceanite_leggings": "Oceanite Leggings",
-  "item.moreorigins.oceanite_boots": "Oceanite Boots"
+  "item.moreorigins.oceanite_boots": "Oceanite Boots",
+
+  "enchantment.moreorigins.soaring": "Soaring",
+  "enchantment.moreorigins.wind_catcher": "Wind Catcher"
 }
