feat: cave inchling origin!

--- a/src/main/resources/assets/moreorigins/lang/en_us.json
+++ b/src/main/resources/assets/moreorigins/lang/en_us.json
@@ -8,5 +8,6 @@
   "item.moreorigins.oceanite_boots": "Oceanite Boots",
 
   "enchantment.moreorigins.soaring": "Soaring",
-  "enchantment.moreorigins.wind_catcher": "Wind Catcher"
+  "enchantment.moreorigins.wind_catcher": "Wind Catcher",
+  "enchantment.moreorigins.ice_aspect": "Ice Aspect"
 }
